[metadata]
name = exhale
version = attr: exhale.__version__
author = Stephen McDowell
author_email = svenevs.pypi@gmail.com
description =
    Automatic C++ library API documentation generator using Doxygen, Sphinx, and
    Breathe.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/svenevs/exhale
project_urls =
    Documentation = https://exhale.readthedocs.io/en/latest/
    Source = https://github.com/svenevs/exhale
    Tracker = https://github.com/svenevs/exhale/issues
license = BSD 3-Clause License
# See: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation

[options]
python_requires = >=3.6
zip_safe = False
# NOTE: see MANIFEST.in, I could not figure out how to use
#       [options.package_data] in this file.
# See: https://github.com/pypa/setuptools/issues/1461
include_package_data = False
packages = find:
# NOTE: making changes here?  Please also update tox.ini [testenv{deps}]!
install_requires =
    # From breathe==4.32.0
    docutils>=0.12
    Sphinx>=3.0,<5
    # For exhale
    # TODO: waiting on breathe>=4.32.0, wheel needed to install git breathe
    # breathe>=4.32.0
    breathe
    # end TODO
    beautifulsoup4
    lxml
    # TODO: remove this dependency
    six

[options.packages.find]
exclude =
    testing
    testing.*

########################################################################################
# Maybe one day this will move to pyproject.toml.
# https://github.com/PyCQA/flake8/issues/234
[flake8]
max-line-length = 111
ignore =
    # I like to line up operators when possible
    E221, E222,
    # I also like obscene block comments for the minimap on sublime
    E266,
    # And sometimes I likes to line up my parameters
    E241,
    # And sometimes I likes to line up my keywords
    E272,
    # And sometimes I likes to line up my parameters
    E201,
    # I disagree, one line docstrings should not be on a single
    # line.  The whole point is to make code understandable,
    # for which readability for the developer with the file open
    # is crucial. /rant
    D200,
    # No __init__ methods should be documented, document the class instead
    D107,
    # Not all function / variable names should be lower-case
    N802, N806,
    # Empty newline between every third-party import is ridiculous
    I201
exclude =
    # Do not parse the git directory
    .git,
    # Ignore the docs conf.py from sphinx
    conf.py
    # Ignore the eggs (packaging artifacts)
    .eggs
