[metadata]
name = exhale
version = attr: exhale.__version__
author = Stephen McDowell
author_email = svenevs.pypi@gmail.com
description =
    Automatic C++ library API documentation generator using Doxygen, Sphinx, and
    Breathe.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/svenevs/exhale
project_urls =
    Documentation = https://exhale.readthedocs.io/en/latest/
    Source = https://github.com/svenevs/exhale
    Tracker = https://github.com/svenevs/exhale/issues
license = BSD 3-Clause License
# See: https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Documentation

[options]
python_requires = >=3.7
zip_safe = False
packages = find:
# NOTE: making changes here?  Please also update tox.ini [testenv{deps}]!
install_requires =
    # From breathe==4.35.0
    docutils>=0.12
    Sphinx>=4.0,!=5.0.0
    # For exhale
    breathe>=4.35.0
    beautifulsoup4
    lxml
    # TODO: remove this dependency
    six

[options.package_data]
# NOTE: UserWarning from setuptools about newlines in SOURCES.txt.  Not sure
# how to avoid it.  Possible upstream bug.
exhale =
    data/treeView/collapsible-lists/css/button-closed.png
    data/treeView/collapsible-lists/css/list-item-open.png
    data/treeView/collapsible-lists/css/button-open.png
    data/treeView/collapsible-lists/css/list-item-last.png
    data/treeView/collapsible-lists/css/list-item.png
    data/treeView/collapsible-lists/css/list-item-contents.png
    data/treeView/collapsible-lists/css/list-item-last-open.png
    data/treeView/collapsible-lists/css/list-item-root.png
    data/treeView/collapsible-lists/css/tree_view.css
    data/treeView/collapsible-lists/css/button.png
    data/treeView/collapsible-lists/js/CollapsibleLists.compressed.js
    data/treeView/collapsible-lists/js/apply-collapsible-lists.js
    data/treeView/collapsible-lists/LICENSE.md
    data/treeView-bootstrap/bootstrap-treeview/bootstrap-treeview.min.css
    data/treeView-bootstrap/bootstrap-treeview/bootstrap-treeview.min.js
    data/treeView-bootstrap/bootstrap-treeview/LICENSE
    data/treeView-bootstrap/bootstrap-treeview/apply-bootstrap-treview.js

[options.packages.find]
exclude =
    testing
    testing.*

########################################################################################
# Maybe one day this will move to pyproject.toml.
# https://github.com/PyCQA/flake8/issues/234
[flake8]
max-line-length = 111
ignore =
    # I like to line up operators when possible
    E221, E222,
    # I also like obscene block comments for the minimap on sublime
    E266,
    # And sometimes I likes to line up my parameters
    E241,
    # And sometimes I likes to line up my keywords
    E272,
    # And sometimes I likes to line up my parameters
    E201,
    # I disagree, one line docstrings should not be on a single
    # line.  The whole point is to make code understandable,
    # for which readability for the developer with the file open
    # is crucial. /rant
    D200,
    # No __init__ methods should be documented, document the class instead
    D107,
    # Not all function / variable names should be lower-case
    N802, N806,
    # Empty newline between every third-party import is ridiculous
    I201
exclude =
    # Do not parse the git directory
    .git,
    # Ignore the docs conf.py from sphinx
    conf.py
    # Ignore the eggs (packaging artifacts)
    .eggs
